# KnuthForDummies

./: .gitignore  README.md
code/: KnuthForDummies.cabal  LICENSE
code/lib/KnuthForDummies/: BooleanLattice.hs  Measure.hs  Statement.hs
code/test/: BooleanLattice.hs  Measure.hs  Statement.hs
doc/: 1_addition.tex  Makefile
doc/figures/: boolean_lattice.py  question_lattice.py
