name:                KnuthForDummies
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/KnuthForDummies#readme
license:             MIT
license-file:        LICENSE
author:              Brendon J. Brewer
maintainer:          Brendon J. Brewer
copyright:           2016 Brendon J. Brewer
category:            Science
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      lib
  default-language:    Haskell2010
  ghc-options:         -Wall -O2
  exposed-modules:     KnuthForDummies.Statement
  build-depends:       base >= 4.7 && < 5

executable KnuthForDummies
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  ghc-options:         -Wall -O2

